@@ -13,6 +13,8 @@ ext/nokogiri/native.c
 ext/nokogiri/native.h
 ext/nokogiri/xml_cdata.c
 ext/nokogiri/xml_cdata.h
+ext/nokogiri/xml_comment.c
+ext/nokogiri/xml_comment.h
 ext/nokogiri/xml_document.c
 ext/nokogiri/xml_document.h
 ext/nokogiri/xml_dtd.c
@@ -64,6 +66,7 @@ lib/nokogiri/xml/after_handler.rb
 lib/nokogiri/xml/before_handler.rb
 lib/nokogiri/xml/builder.rb
 lib/nokogiri/xml/cdata.rb
+lib/nokogiri/xml/comment.rb
 lib/nokogiri/xml/document.rb
 lib/nokogiri/xml/dtd.rb
 lib/nokogiri/xml/element.rb
@@ -114,12 +117,14 @@ test/html/test_document.rb
 test/test_convert_xpath.rb
 test/test_css_cache.rb
 test/test_gc.rb
+test/test_memory_leak.rb
 test/test_nokogiri.rb
 test/test_reader.rb
 test/test_xslt_transforms.rb
 test/xml/sax/test_parser.rb
 test/xml/test_builder.rb
 test/xml/test_cdata.rb
+test/xml/test_comment.rb
 test/xml/test_document.rb
 test/xml/test_dtd.rb
 test/xml/test_node.rb
