@@ -1,20 +1,19 @@
-#include <xml_cdata.h>
+#include <xml_comment.h>
 
 /*
  * call-seq:
  *  new(document, content)
  *
- * Create a new CData element on the +document+ with +content+
+ * Create a new Comment element on the +document+ with +content+
  */
 static VALUE new(VALUE klass, VALUE doc, VALUE content)
 {
   xmlDocPtr xml_doc;
   Data_Get_Struct(doc, xmlDoc, xml_doc);
 
-  xmlNodePtr node = xmlNewCDataBlock(
+  xmlNodePtr node = xmlNewDocComment(
       xml_doc,
-      (const xmlChar *)StringValuePtr(content),
-      NUM2INT(rb_funcall(content, rb_intern("length"), 0))
+      (const xmlChar *)StringValuePtr(content)
   );
 
   VALUE rb_node = Nokogiri_wrap_xml_node(node);
@@ -24,21 +23,19 @@ static VALUE new(VALUE klass, VALUE doc, VALUE content)
   return rb_node;
 }
 
-VALUE cNokogiriXmlCData;
-void init_xml_cdata()
+VALUE cNokogiriXmlComment;
+void init_xml_comment()
 {
   VALUE nokogiri = rb_define_module("Nokogiri");
   VALUE xml = rb_define_module_under(nokogiri, "XML");
-  VALUE node = rb_define_class_under(xml, "Node", rb_cObject);
-  VALUE text = rb_define_class_under(xml, "Text", node);
 
   /*
    * CData represents a CData node in an xml document.
    */
-  VALUE klass = rb_define_class_under(xml, "CDATA", text);
+  VALUE klass = rb_define_class_under(xml, "Comment", cNokogiriXmlNode);
 
 
-  cNokogiriXmlCData = klass;
+  cNokogiriXmlComment = klass;
 
   rb_define_singleton_method(klass, "new", new, 2);
 }
