@@ -1,0 +1,9 @@
+#ifndef NOKOGIRI_XML_COMMENT
+#define NOKOGIRI_XML_COMMENT
+
+#include <native.h>
+
+void init_xml_comment();
+
+extern VALUE cNokogiriXmlComment;
+#endif
