@@ -5,6 +5,7 @@ require 'nokogiri/xml/node'
 require 'nokogiri/xml/dtd'
 require 'nokogiri/xml/text'
 require 'nokogiri/xml/cdata'
+require 'nokogiri/xml/comment'
 require 'nokogiri/xml/document'
 require 'nokogiri/xml/node_set'
 require 'nokogiri/xml/xpath'
