@@ -1,0 +1,6 @@
+module Nokogiri
+  module XML
+    class Comment < Node
+    end
+  end
+end
